--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,25 @@
-/dist
-.env
-.DS_Store
-/uploads
-/node_modules
-yarn-error.log
-/.idea
+/lib
+node_modules
+.DS_store
+.env*
+/*.js
+!index.js
+yarn.lock
+.gitignore
+.eslintrc
+.babelrc
+.prettierrc
+
+/api/
+/services/
+/models/
+/interfaces/
+/subscribers/
+/migrations/
+/loaders/
+/repositories/
+/utils/
+/types/
+/index.js
+
+/invoices/temp/*.pdf
