--- a/package.json
+++ b/package.json
@@ -1,34 +1,49 @@
 {
-  "name": "medusa-starter-default",
-  "version": "0.0.1",
-  "description": "A starter for Medusa projects.",
-  "author": "Sebastian Rindom <skrindom@gmail.com>",
+  "name": "@ai-ecom/medusa-plugin-invoice",
+  "version": "0.1.0",
+  "description": "A plugin for create invoice",
+  "author": "Ai-Ecom <admin@ai-ecom.io>",
   "license": "MIT",
   "scripts": {
-    "seed": "medusa seed -f ./data/seed.json",
-    "build": "babel src -d dist --extensions \".ts,.js\"",
-    "start": "medusa develop"
+    "build": "babel src --out-dir . --ignore **/__tests__ --extensions \".ts,.js\"",
+    "start": "medusa develop",
+    "clean": "./node_modules/.bin/rimraf services/ types/ utils/ models/ migrations/ api/ repositories/ subscribers/ interfaces/ index.js index.map.js invoices/temp/*.pdf",
+    "watch": "babel -w src --out-dir . --ignore **/__tests__ --extensions \".ts,.js\"",
+    "prepare": "npm run clean && cross-env NODE_ENV=production npm run build"
   },
   "dependencies": {
-    "@medusajs/medusa": "^1.6.0",
-    "@medusajs/medusa-cli": "^1.3.3",
-    "medusa-fulfillment-manual": "^1.1.31",
+    "@medusajs/medusa": "^1.6.4",
+    "date-fns": "^2.29.3",
     "medusa-interfaces": "^1.3.3",
-    "medusa-payment-manual": "^1.0.16",
-    "medusa-payment-stripe": "^1.1.45",
+    "puppeteer": "^19.3.0",
     "typeorm": "^0.2.36"
   },
-  "repository": "https://github.com/medusajs/medusa-starter-default.git",
+  "repository": "https://github.com/ai-ecom/medusa-plugin-invoice.git",
   "keywords": [
-    "sqlite",
-    "ecommerce",
-    "headless",
+    "invoice",
     "medusa"
+  ],
+  "files": [
+    "invoices",
+    "api",
+    "migrations",
+    "models",
+    "repositories",
+    "services",
+    "subscribers",
+    "types",
+    "utils"
   ],
   "devDependencies": {
     "@babel/cli": "^7.18.10",
     "@babel/core": "^7.18.10",
     "@babel/preset-typescript": "^7.14.5",
-    "babel-preset-medusa-package": "^1.1.19"
+    "@medusajs/medusa": "^1.x",
+    "@types/node": "^18.11.0",
+    "babel-preset-medusa-package": "^1.1.19",
+    "cross-env": "^7.0.3",
+    "rimraf": "^3.0.2",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.5"
   }
 }
