--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@medusajs/medusa": "^1.6.4",
+    "@sendgrid/eventwebhook": "^7.7.0",
     "date-fns": "^2.29.3",
     "medusa-interfaces": "^1.3.3",
     "puppeteer": "^19.3.0",
