--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "dependencies": {
     "@medusajs/medusa": "^1.6.4",
     "@sendgrid/eventwebhook": "^7.7.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "date-fns": "^2.29.3",
     "medusa-interfaces": "^1.3.3",
     "puppeteer": "^19.3.0",
+    "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.36"
   },
   "repository": "https://github.com/ai-ecom/medusa-plugin-invoice.git",
